# clitag

./: README.md  clitag  pyproject.toml  setup.cfg
clitag/: clitag.py
