[metadata]
name = clitag
version = 0.1.0
description = "Command line audio tag processor"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://codeberg.org/monego/clitag
author = Vinicius Monego
author_email = monego@posteo.net

[options]
packages = find:
install_requires =
    mutagen

[options.entry_points]
console_scripts =
    clitag = clitag.clitag:main
